# Another-Coding-Agent

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.archive-not-used/: README.md
aca/: __init__.py  agent.py  approval.py  cli.py  cli_text.py  config.py  console.py  contracts.py  core_types.py  db.py  json_utils.py  master.py  prompts.py  runtime.py  task_workspace.py  token_utils.py  workspace_tools.py
aca/agents/: __init__.py  base_agent.py  challenger.py  james.py  steering.py  tool_docs.py  worker.py
aca/cli/: __init__.py  app.py
aca/llm/: __init__.py  client.py  history.py  models.py  openrouter_client.py  providers.py  types.py
aca/orchestration/: __init__.py  guardrails.py  history.py  orchestrator.py  persistence.py  prompts.py  protocols.py  repo_summary.py  state.py  steering.py  todo.py  tools.py
aca/services/: __init__.py  chat.py  conversation.py  triage.py
aca/storage/: __init__.py  bootstrap.py  models.py
aca/tools/: __init__.py  access.py  commands.py  execution.py  memory.py  read.py  registry.py  workspace.py  write.py
docs/: ARCHITECTURE.md  CLI.md  DB_SCHEMA.md  FILE_SCHEMAS.md  FLOWS.md  STATE-MACHINE.md  TOOLS_AND_PERMISSIONS.md  structured.md
examples/: demo_conversation_service.py  demo_runtime.py
experiments/: test_agent.py  test_openai.py
tests/: test_agent_class.py  test_chat_service.py  test_contracts.py  test_conversation_service.py  test_master_classifier.py  test_neon_orchestrator.py  test_provider_stack.py  test_triage_orchestrator.py  test_workspace_tools.py
tests/unit/: conftest.py  (+10 more)
(+6 files in other folders)
