[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aca"
version = "0.1.0"
description = "Another Coding Agent"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.30.0",
    "rich>=14.0.0",
    "chromadb>=1.5.5",
    "python-dotenv>=1.2.0",
    "whatthepatch>=1.0.7",
    "tiktoken>=0.12.0",
    "pydantic>=2.12.0",
    "pytest>=9.0.0",
]

[project.scripts]
aca = "aca.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aca*"]
